# CrossCorrTest

./: CMakeLists.txt  CMakePresets.json
IppCrossCorrTest/: CMakeLists.txt  IppCrossCorrTest.cpp
modules/: FindIPP.cmake
